--- a/css/app.css
+++ b/css/app.css
@@ -34,11 +34,13 @@ z-index: 999;
 /*LOGO: ENDS*/
 
 /*NAV: BEGINS*/
-.top-bar-right{ margin-top: 0;}
+.top-bar-right{
+margin-top: 0;}
 
 @media screen and (min-width: 40em) {
 .top-bar-right{ margin-top: 45px;}
 }
+
 .title-bar {
 background-color: rgba(8, 66, 102, 0.8);
 }
@@ -75,12 +77,54 @@ float: right;
 /*HEADER: ENDS*/
 
 
+/*SLIDER: BEGINS*/
+#homepageslider {
+z-index: 998;
+}
+
+.homeslide {
+height: 600px;
+margin-top: 100px;
+}
+
+.orbit-next, .orbit-previous {
+display: none;
+}
+
+.orbit-caption {
+/*OPTIONAL STYLING FOR CAPTIONS
+height: 10em;
+width: 17em;
+margin-left: 4em;
+margin-bottom: 1em;
+background-color: inherit;
+padding: 0px;
+color: #E66B24;
+text-align: center;
+line-height: 120%;
+*/
+font-size: 20pt;
+font-weight: bold;
+text-align: right;
+background-color: #084266;
+}
+
+/*OPTIONAL BULLETS
+.orbit-bullets {
+position: absolute;
+left: 10em;
+bottom: 1px;
+}
+*/
+
+/*SLIDER: ENDS*/
+
 
 
 
 /*FOOTER: BEGINS*/
 footer {
-height: 200px;
+height: 170px;
 background-color: #89AECA;
 text-align: center;
 color: white;
@@ -93,10 +137,11 @@ width: 50px;
 margin: 10px;
 }
 
+}
 #firstline {
   font-size: 25pt;
   font-weight: bold;
-  margin-top: 90px;
+  margin-top:30px;
 }
 
 #secondline {
@@ -107,10 +152,12 @@ margin: 10px;
 /*BODY: BEGINS*/
 .h-package{
   font-weight: bold;
+  font-size: 120%;
   margin-left: 35%
 }
 .h-packages li{
   margin-left: 35%;
+  text-shadow: 2px 2px 2px white;
 }
 
 .h-image1{
@@ -138,21 +185,122 @@ margin-left:
 }
 .row-divider{
   margin-left: 40%;
+  font-weight: bold;
+  color: #E76324;
+  font-family: 'Padauk', sans-serif;
+  text-shadow: 2px 2px 2px white;
+}
+.divider p {
+line-height: 50px;
+font-family: "Signika", sans-serif;
+font-size: 40pt;
+text-transform: uppercase;
+font-weight: bold;
+text-align: center;
+color: #084266;
+margin: 10px;
+}
+/*DIVIDER: ENDS*/
+
+/*SERVICES, PORTFOLIO, BLOG: BEGINS*/
+#pplaceholder {
+margin-bottom: 1em;
+}
+/*SERVICES, PORTFOLIO, BLOG: ENDS*/
+/*SERVICES, PORTFOLIO, BLOG: BEGINS*/
+.services {
+padding-top: 20px;
 }
 
+.services div {
+padding-left: 10px;
+padding-right: 10px;
+padding-bottom: 20px;
+position: relative;
+}
+
+.services div a {
+font-size: 30px;
+font-family: 'Signika', sans-serif;
+text-transform: uppercase;
+text-align: center;
+color: white;
+position: absolute;
+bottom: 0px;
+left: 0px;
+right: 0px;
+padding: 0.4rem;
+margin-bottom: 50px;
+margin-left: 30px;
+margin-right: 30px;
+background-color: rgba(231, 99, 36, 0.8);
+}
+
+.services div img {
+height: 400px;
+width: 500px;
+border: 2px solid #ffffff;
+align-items: center;
+}
+/*SERVICES, PORTFOLIO, BLOG: ENDS*/
+
+
+
+
+/*CREATIVE PROCESS: BEGINS*/
+#cpplaceholder {
+margin-bottom: 1em;
+}
+/*CREATIVE PROCESS: ENDS*/
+
+
+
+
+/*ABOUT: BEGINS*/
+#about {
+font-family: 'Pontano Sans', sans-serif;
+font-weight: bold;
+font-size: 15pt;
+text-align: center;
+color: black;
+text-shadow: 2px 2px 4px white;
+margin-bottom: 1em;
+}
+/*ABOUT: ENDS*/
+
+
+#header1 p {
+  height: 100px;
+  margin-top: 200px;
+  margin-bottom: -30px;
+  text-align: center;
+  font-weight: bold;
+  font-size: 30pt;
+  color: #084266;
+}
 /*DIVIDER: ENDS*/
+
+
+
+
 
 /*MAP & CONTACT PAGE: BEGINS*/
 #map {
   padding: 0px;
+
 }
+
+#map iframe {
+ margin-bottom: 10px;
+ width: 550px;
+ height: 500px;
+}
+
 
 #contact{
   padding: 0px;
 }
-#map iframe {
- margin-bottom: 10px;
-}
+
 label{
   font-family: 'Signika', sans-serif;
   font-weight: bold;
